fixed errors related to syntax and spacing. adding some additional rulings for buttons

--- a/css/main.css
+++ b/css/main.css
@@ -263,11 +263,14 @@ section {
     position: relative;
 }
 
-.full-banner::before {
+.full-banner:before {
     content: "";
     position: absolute;
     border: 1px solid #ffffff;
-    border: 30px 30px 50px 50px;
+    top: 30px;
+    bottom: 30px;
+    left: 50px;
+    right: 50px;
     z-index: 1;
 }
 
@@ -295,7 +298,7 @@ section {
     line-height: 1;
 }
 
-.full-banner-sidebar h4::after {
+.full-banner-sidebar h4:after {
     content: "";
     width: 100px;
     height: 1px;
@@ -304,20 +307,21 @@ section {
     display: block;
 }
 
-.full-banner-sidebar div:nth-of-type(1) {
+.full-banner-sidebar > div:nth-of-type(1) {
     font-size: 60px;
     font-weight: 700;
     line-height: 1;
 }
 
-.full-banner-sidebar div:nth-of-type(2) {
+.full-banner-sidebar > div:nth-of-type(2) {
     font-size: 25px;
     font-weight: 200;
     letter-spacing: 3px;
 }
 
-.full-banner-sidebar.btn.btn-default {
+.full-banner-sidebar .btn.btn-default {
     margin-top: 50px;
     text-transform: uppercase;
+    letter-spacing: 1px;
     z-index: 1;
 }
